cria documentacao do controller ticket
