# app/Http/Controllers/TicketController.php
@@ -19,7 +19,15 @@ class TicketController extends Controller
     }
 
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *      path="/api/tickets",
+     *      operationId="getTicketsList",
+     *      tags={"Tickets"},
+     *      summary="Get list of tickets",
+     *      description="Returns list of tickets",
+     *      @OA\Response(response=200, description="Successful operation"),
+     *      @OA\Response(response=400, description="Bad request")
+     * )
      */
     public function index(Request $request)
     {
@@ -44,7 +52,22 @@ class TicketController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Put(
+     *      path="/api/tickets/{ticket}",
+     *      operationId="updateTicket",
+     *      tags={"Tickets"},
+     *      summary="Update ticket",
+     *      description="Update a ticket",
+    *      @OA\RequestBody(
+    *          required=true,
+    *          description="Update a Ticket",
+    *          @OA\JsonContent(
+    *              @OA\Property(property="total_price", type="float", example="1800.99")
+    *          )
+    *      ),
+     *      @OA\Response(response=200, description="Successful operation"),
+     *      @OA\Response(response=400, description="Bad request")
+     * )
      */
     public function update(Ticket $ticket, UpdateTicketRequest $request)
     {
@@ -55,6 +78,38 @@ class TicketController extends Controller
         return response()->json($ticket);
     }
 
+    /**
+     * @OA\Post(
+     *      path="/api/tickets/buy",
+     *      operationId="buyTicket",
+     *      tags={"Tickets"},
+     *      summary="Buy Ticket",
+     *      description="Buy ticket",
+    *      @OA\RequestBody(
+    *          required=true,
+    *          description="Buy Ticket",
+    *          @OA\JsonContent(
+    *              @OA\Property(property="flight_id", type="string", example="1"),
+    *              @OA\Property(property="buyer_name", type="string", example="João Pedro"),
+    *              @OA\Property(property="buyer_cpf", type="string", example="11122233344"),
+    *              @OA\Property(property="buyer_birthdate", type="date", example="1993-02-12"),
+    *              @OA\Property(property="buyer_email", type="string", format="email", example="joaopedro@airport.com"),
+    *              @OA\Property(property="passengers", type="array", 
+    *                  @OA\Items(
+    *                      @OA\Property(property="class_id", type="integer", example=1),
+    *                      @OA\Property(property="seat_number", type="integer", example="1"),
+    *                      @OA\Property(property="passenger_name", type="string", example="João Pedro"),
+    *                      @OA\Property(property="passenger_cpf", type="string", example="11122233344"),
+    *                      @OA\Property(property="passenger_birthdate", type="date", example="1993-02-12"),
+    *                      @OA\Property(property="check_baggage", type="boolean", example="true"),
+    *                  ),
+    *              ),
+    *          )
+    *      ),
+     *      @OA\Response(response=200, description="Successful operation"),
+     *      @OA\Response(response=400, description="Bad request")
+     * )
+     */
     public function buy(BuyTicketRequest $request)
     {
         $data = $request->validated();
@@ -62,6 +117,17 @@ class TicketController extends Controller
         return $this->ticketRepository->buy($data);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/tickets/voucher/{buyerCpf}/{flight}",
+     *      operationId="getVoucher",
+     *      tags={"Tickets"},
+     *      summary="Get voucher of ticket",
+     *      description="Returns voucher of ticket",
+     *      @OA\Response(response=200, description="Successful operation"),
+     *      @OA\Response(response=400, description="Bad request")
+     * )
+     */
     public function voucher(string $cpf, Flight $flight)
     {
         $vouchers = $this->ticketRepository->voucher($cpf, $flight);
@@ -69,6 +135,17 @@ class TicketController extends Controller
         return response()->json($vouchers);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/tickets/baggage/{ticketCode}",
+     *      operationId="getBaggageTag",
+     *      tags={"Tickets"},
+     *      summary="Get voucher of baggage ticket",
+     *      description="Returns baggage tag of ticket",
+     *      @OA\Response(response=200, description="Successful operation"),
+     *      @OA\Response(response=400, description="Bad request")
+     * )
+     */
     public function baggage(string $ticketCode)
     {
         $vouchers = $this->ticketRepository->baggage($ticketCode);
@@ -76,6 +153,17 @@ class TicketController extends Controller
         return response()->json($vouchers);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/tickets/buyer/{buyerCpf}",
+     *      operationId="getTicketsByCpf",
+     *      tags={"Tickets"},
+     *      summary="Get tickets by buyer",
+     *      description="Get tickets by buyer",
+     *      @OA\Response(response=200, description="Successful operation"),
+     *      @OA\Response(response=400, description="Bad request")
+     * )
+     */
     public function ticketsByCpf(string $cpf)
     {
         $tickets = $this->ticketRepository->ticketsByCpf($cpf);
@@ -83,6 +171,25 @@ class TicketController extends Controller
         return response()->json($tickets);
     }
 
+    /**
+     * @OA\Post(
+     *      path="/api/tickets/cancel",
+     *      operationId="cancelTickets",
+     *      tags={"Tickets"},
+     *      summary="Cancel Tickets",
+     *      description="Cancel tickets",
+    *      @OA\RequestBody(
+    *          required=true,
+    *          description="Cancel Tickets",
+    *          @OA\JsonContent(
+    *              @OA\Property(property="flightId", type="string", example="1"),
+    *              @OA\Property(property="buyerCpf", type="string", example="11122233344"),
+    *          )
+    *      ),
+     *      @OA\Response(response=200, description="Successful operation"),
+     *      @OA\Response(response=400, description="Bad request")
+     * )
+     */
     public function cancel(Request $request)
     {
         $data = $request->all();
