# storage/api-docs/api-docs.json
@@ -190,6 +190,239 @@
                     }
                 }
             }
+        },
+        "/api/tickets": {
+            "get": {
+                "tags": [
+                    "Tickets"
+                ],
+                "summary": "Get list of tickets",
+                "description": "Returns list of tickets",
+                "operationId": "getTicketsList",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/tickets/{ticket}": {
+            "put": {
+                "tags": [
+                    "Tickets"
+                ],
+                "summary": "Update ticket",
+                "description": "Update a ticket",
+                "operationId": "updateTicket",
+                "requestBody": {
+                    "description": "Update a Ticket",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "total_price": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": "1800.99"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/tickets/buy": {
+            "post": {
+                "tags": [
+                    "Tickets"
+                ],
+                "summary": "Buy Ticket",
+                "description": "Buy ticket",
+                "operationId": "buyTicket",
+                "requestBody": {
+                    "description": "Buy Ticket",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "flight_id": {
+                                        "type": "string",
+                                        "example": "1"
+                                    },
+                                    "buyer_name": {
+                                        "type": "string",
+                                        "example": "João Pedro"
+                                    },
+                                    "buyer_cpf": {
+                                        "type": "string",
+                                        "example": "11122233344"
+                                    },
+                                    "buyer_birthdate": {
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "1993-02-12"
+                                    },
+                                    "buyer_email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "joaopedro@airport.com"
+                                    },
+                                    "passengers": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "class_id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "seat_number": {
+                                                    "type": "integer",
+                                                    "example": "1"
+                                                },
+                                                "passenger_name": {
+                                                    "type": "string",
+                                                    "example": "João Pedro"
+                                                },
+                                                "passenger_cpf": {
+                                                    "type": "string",
+                                                    "example": "11122233344"
+                                                },
+                                                "passenger_birthdate": {
+                                                    "type": "string",
+                                                    "format": "date",
+                                                    "example": "1993-02-12"
+                                                },
+                                                "check_baggage": {
+                                                    "type": "boolean",
+                                                    "example": "true"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/tickets/voucher/{buyerCpf}/{flight}": {
+            "get": {
+                "tags": [
+                    "Tickets"
+                ],
+                "summary": "Get voucher of ticket",
+                "description": "Returns voucher of ticket",
+                "operationId": "getVoucher",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/tickets/baggage/{ticketCode}": {
+            "get": {
+                "tags": [
+                    "Tickets"
+                ],
+                "summary": "Get voucher of baggage ticket",
+                "description": "Returns baggage tag of ticket",
+                "operationId": "getBaggageTag",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/tickets/buyer/{buyerCpf}": {
+            "get": {
+                "tags": [
+                    "Tickets"
+                ],
+                "summary": "Get tickets by buyer",
+                "description": "Get tickets by buyer",
+                "operationId": "getTicketsByCpf",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/api/tickets/cancel": {
+            "post": {
+                "tags": [
+                    "Tickets"
+                ],
+                "summary": "Cancel Tickets",
+                "description": "Cancel tickets",
+                "operationId": "cancelTickets",
+                "requestBody": {
+                    "description": "Cancel Tickets",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "flightId": {
+                                        "type": "string",
+                                        "example": "1"
+                                    },
+                                    "buyerCpf": {
+                                        "type": "string",
+                                        "example": "11122233344"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
         }
     }
 }
